# Instagram2Shop

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml
app/: __init__.py
app/mod_auth/: controllers.py  forms.py  models.py
app/mod_ecomm/: controllers.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
