[tool.poetry]
name = "instagram2shop"
version = "0.1.0"
description = "An automated way of making a website out of an instagram store"
authors = ["Vikrant Reddy <vikrantreddy@hotmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
instaloader = "^4.8.1"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
